# word-coder

./: .dockerignore  Cargo.toml  Dockerfile
frontend/: index.html  main.js  styles.css
src/: generator.rs  main.rs
