[package]
name = "word-coder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
encoding_rs = "0.8.33"
axum = { version = "0.6.20", features = ["headers", "json"] }
# tower-http = { version = "0.5.0", features = ["cors"] }
tower-http = { version = "0.4.4", features = ["cors"] }
# http = "1.0.0"
tokio = { version = "1.34.0", features = ["macros", "rt", "signal"] }
serde = "1.0.193"
serde_json = "1.0.108"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["chrono"] }

